# pitch

./: .env.example  .gitignore  AGENTS.md  package.json  pnpm-lock.yaml
.agents-reverse-engineer/: GENERATION-PLAN.md  config.yaml
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  (+7 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
apps/: AGENTS.md
apps/api/: AGENTS.md  package.json  pyproject.toml
apps/api/app/: AGENTS.md  main.py
apps/api/app/api/: AGENTS.md
apps/api/app/api/v1/: AGENTS.md  analytics.py  auth.py  documents.py  health.py  notifications.py  pitch.py  query.py  reviews.py  sessions.py
apps/api/app/core/: AGENTS.md  auth.py  config.py  supabase.py
apps/api/app/models/: AGENTS.md  analytics.py  chunk.py  document.py  pitch.py  query.py  session.py
apps/api/app/services/: AGENTS.md  confidence.py  ingestion.py  node_mapper.py  pipeline.py  query_engine.py  retrieval.py
apps/api/app/services/parsers/: AGENTS.md  excel_parser.py  markdown_pipeline.py  pdf_pipeline.py
apps/api/tests/: conftest.py  test_analytics_api.py  test_auth.py  test_confidence.py  test_documents_api.py  test_health.py  test_ingestion.py  test_node_mapper.py  test_parsers.py  test_pitch_api.py  test_query_api.py  test_retrieval.py  test_reviews_api.py  test_sessions_api.py  test_share.py
content/: .gitignore  build-all.py  build_docs.py  pyproject.toml
docs/: AGENTS.md  prd.md
supabase/: AGENTS.md  config.toml
(+300 files in other folders)
